basic templates work; VCE "doc" view started

--- a/template/index.html
+++ b/template/index.html
@@ -22,6 +22,7 @@ height: 2em;
 
 <img id="logo" src="/static/images/logo.png" width="300">
 
+<a href="/view">TEST VIEW VOICE</a>
 
 <img class="button" src="/static/images/button-off.png"> CRT: XXXXXXXX
 
