--- a/resources/app/static/css/base.css
+++ b/resources/app/static/css/base.css
@@ -1,9 +1,103 @@
-body {
-    background-color : black;
-    color : white;
-    font-family: sans-serif;
-}
 #logo {
     position: relative;
     float: right;
+}
+
+
+* {
+    box-sizing:  border-box;
+}
+
+html, body {
+    background-color: black;
+    color: #fff;
+    height: 100%;
+    margin: 0;
+    width: 100%;
+    font-family: sans-serif;
+    font-weight: 200;
+}
+
+.header {
+    float: top;
+    width: 100%;
+    height: 60px;
+}
+.logo {
+    float: right;
+    overflow: auto;
+    padding: 15px;
+}
+
+.connectionStatus {
+    float: left;
+    height: 100%;
+    overflow: auto;
+    padding: 15px;
+}
+
+.left {
+    background-color: #333;
+    color: #fff;
+    float: left;
+    height: 100%;
+    overflow: auto;
+    padding: 15px;
+    width: 20em;
+}
+
+.dir {
+    cursor: pointer;
+    padding: 3px;
+}
+
+.file {
+    cursor: pointer;
+    padding: 3px;
+}
+
+.dir .fa {
+    margin-right: 5px;
+}
+
+.file .fa {
+    margin-right: 10px;
+}
+
+.right {
+    float: right;
+    height: 100%;
+    overflow: auto;
+    padding: 15px;
+    /*width: 60%;*/
+}
+
+.title {
+    font-size: 1.5em;
+    text-align: center;
+    word-wrap: break-word;
+}
+
+#path {
+    font-size: 1.1em;
+    text-align: center;
+    word-wrap: break-word;
+    font-weight: 1000;
+}
+
+.panel {
+    background-color: #f1f1f1;
+    border: solid 1px #e1e1e1;
+    border-radius: 4px;
+    margin-top: 15px;
+    padding: 15px;
+    text-align: center;
+}
+
+.stat {
+    font-weight: bold;
+}
+
+.chart_title {
+    margin-bottom: 5px;
 }
