--- a/resources/app/static/css/base.css
+++ b/resources/app/static/css/base.css
@@ -134,3 +134,38 @@ td.centered span {
     margin-left: auto;
     margin-right: auto;
 }
+
+/* Dropdown menu support */
+.dropbtn {
+    cursor: pointer;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/*.dropbtn:hover, .dropbtn:focus {
+  background-color: #2980B9;
+}*/
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 30;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  width: fit-content;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: block;}
