colored spinner, floats over the content instead of pushing it down

--- a/resources/app/static/css/base.css
+++ b/resources/app/static/css/base.css
@@ -76,6 +76,12 @@ table {
     padding: 18px;
 }
 
+#spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
 .dir {
     cursor: pointer;
     padding: 3px;
