--- a/windows-installer.wxs
+++ b/windows-installer.wxs
@@ -12,8 +12,8 @@
   <!-- Change Product Id GUID for major release or change in components -->
   <!-- Change Product UpgradeCode GUID for major release  -->
   <Product Name="Synergize $(var.VERSION)"
-	   Id="68081C43-F5C9-412F-9A0A-7BF4B5D3AFA4"
-	   UpgradeCode="E4D363A2-2847-47CA-AA16-C9D2B6478A15"
+	   Id="68081C43-F5C9-412F-9A0A-7BF4B5D3AFA5"
+	   UpgradeCode="E4D363A2-2847-47CA-AA16-C9D2B6478A16"
 	   Version="$(var.VERSION)" Language="1033" Manufacturer="Chinenual">
 
     <Package Id="*" Keywords="Installer" Description="Synergize $(var.VERSION) Installer" Comments="MIT License" Manufacturer="Chinenual" InstallScope="perMachine" InstallerVersion="100" Compressed="yes"/>
@@ -27,21 +27,31 @@
           <Directory Id="INSTALLDIR" Name="Synergize">
 	    <!-- constant GUID -->
             <Component Id="INSTALLDIR_Component"
-		       Guid="FE9BDC25-5037-48D0-B477-CAE0B1177582">
+		       Guid="FE9BDC25-5037-48D0-B477-CAE0B1177583">
               <CreateFolder/>
             </Component>
 	    <!-- constant GUID -->
             <Component Id="MainExecutable"
-		       Guid="A1C41EF0-6558-4795-A69B-0AD587CCEE07">
+		       Guid="A1C41EF0-6558-4795-A69B-0AD587CCEE08">
 	      <!-- constant GUID -->
 	      <File
-		  Id="2634660E-DF2D-4479-A9A0-8DC1C714A0D0"
+		  Id="2634660E-DF2D-4479-A9A0-8DC1C714A0D1"
 		  Name="Synergize.exe"
 		  Source="output/windows-386/Synergize.exe">
 		<Shortcut Id="startmenuSynergize" Directory="ProgramMenuFolder" Name="Synergize"
 			  WorkingDirectory='INSTALLDIR'
 			  Icon="Synergize.ico" 
 			  Advertise="yes" />
+	      </File>
+            </Component>
+	    <!-- constant GUID -->
+            <Component Id="DiagnosticExecutable"
+		       Guid="A1C41EF0-6558-4795-A69B-0AD587CCEE09">
+	      <!-- constant GUID -->
+	      <File
+		  Id="2634660E-DF2D-4479-A9A0-8DC1C714A0D2"
+		  Name="Synergize-cmd.exe"
+		  Source="output/windows-386/Synergize-cmd.exe">
 	      </File>
             </Component>
           </Directory>
@@ -55,6 +65,7 @@
     <Feature Id="Complete" Level="1">
       <ComponentRef Id="INSTALLDIR_Component"/>
       <ComponentRef Id="MainExecutable"/>
+      <ComponentRef Id="DiagnosticExecutable"/>
 <!--      <ComponentRef Id="ProgramMenuDir"/>-->
     </Feature>
 
