CRT edit - add/remove voices from slots

--- a/resources/app/static/css/base.css
+++ b/resources/app/static/css/base.css
@@ -366,3 +366,8 @@ span.spinNOSPIN-Enabled {
     width: 3.5em;
     display: inline-block;
 }
+
+.crtSlotAddButton,
+.crtSlotClearButton {
+    cursor: pointer;
+}
