--- a/_sass/color_schemes/midnight.scss
+++ b/_sass/color_schemes/midnight.scss
@@ -26,8 +26,8 @@ $feedback-color: lighten($sidebar-color, 10%);
 }
 
 p.callout {
-    background-color:#444;
-    margin: 0 4em 0 4em;
+    background-color:#353535;
+    margin: 10px 4em 10px 4em;
     padding: 0 1em 0 1em;
 
     border-radius: 8px 8px 8px 8px;
