--- a/windows-installer.wxs
+++ b/windows-installer.wxs
@@ -9,11 +9,13 @@
   <?define ManSourceDir = "bin/windows" ?>
   <?endif?>
 
+  <!-- GUIDs updated for 2.0.1 -->
+  
   <!-- Change Product Id GUID for major release or change in components -->
   <!-- Change Product UpgradeCode GUID for major release  -->
   <Product Name="Synergize $(var.VERSION)"
-	   Id="68081C43-F5C9-412F-9A0A-7BF4B5D3AFA6"
-	   UpgradeCode="E4D363A2-2847-47CA-AA16-C9D2B6478A17"
+	   Id="68081C43-F5C9-412F-9A0A-7BF4B5D3AFA7"
+	   UpgradeCode="E4D363A2-2847-47CA-AA16-C9D2B6478A18"
 	   Version="$(var.VERSION)" Language="1033" Manufacturer="Chinenual">
 
     <Package Id="*" Keywords="Installer" Description="Synergize $(var.VERSION) Installer" Comments="MIT License" Manufacturer="Chinenual" InstallScope="perMachine" InstallerVersion="100" Compressed="yes"/>
@@ -27,15 +29,15 @@
           <Directory Id="INSTALLDIR" Name="Synergize">
 	    <!-- constant GUID -->
             <Component Id="INSTALLDIR_Component"
-		       Guid="FE9BDC25-5037-48D0-B477-CAE0B1177584">
+		       Guid="FE9BDC25-5037-48D0-B477-CAE0B1177585">
               <CreateFolder/>
             </Component>
 	    <!-- constant GUID -->
             <Component Id="MainExecutable"
-		       Guid="A1C41EF0-6558-4795-A69B-0AD587CCEE09">
+		       Guid="A1C41EF0-6558-4795-A69B-0AD587CCEE10">
 	      <!-- constant GUID -->
 	      <File
-		  Id="2634660E-DF2D-4479-A9A0-8DC1C714A0D2"
+		  Id="2634660E-DF2D-4479-A9A0-8DC1C714A0D3"
 		  Name="Synergize.exe"
 		  Source="output/windows-386/Synergize.exe">
 		<Shortcut Id="startmenuSynergize" Directory="ProgramMenuFolder" Name="Synergize"
@@ -46,10 +48,10 @@
             </Component>
 	    <!-- constant GUID -->
             <Component Id="DiagnosticExecutable"
-		       Guid="A1C41EF0-6558-4795-A69B-0AD587CCEE10">
+		       Guid="A1C41EF0-6558-4795-A69B-0AD587CCEE11">
 	      <!-- constant GUID -->
 	      <File
-		  Id="2634660E-DF2D-4479-A9A0-8DC1C714A0D3"
+		  Id="2634660E-DF2D-4479-A9A0-8DC1C714A0D4"
 		  Name="Synergize-cmd.exe"
 		  Source="output/windows-386/Synergize-cmd.exe">
 	      </File>
