--- a/resources/app/static/css/base.css
+++ b/resources/app/static/css/base.css
@@ -371,3 +371,8 @@ span.spinNOSPIN-Enabled {
 .crtSlotClearButton {
     cursor: pointer;
 }
+
+/* darken preferences disabled */
+.form-control:disabled, .form-control[readonly] {
+    background-color: #aaa;
+}
