incomplete custome landing theme - not used yet

--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -47,6 +47,7 @@ layout: table_wrappers
         <svg viewBox="0 0 24 24" class="icon"><use xlink:href="#svg-menu"></use></svg>
       </a>
     </div>
+<!-- SDT
     <nav role="navigation" aria-label="Main" id="site-nav" class="site-nav">
       {% if site.just_the_docs.collections %}
         {% assign collections_size = site.just_the_docs.collections | size %}
@@ -68,6 +69,7 @@ layout: table_wrappers
     <footer class="site-footer">
       This site uses <a href="https://github.com/pmarsceill/just-the-docs">Just the Docs</a>, a documentation theme for Jekyll.
     </footer>
+-->
   </div>
   <div class="main" id="top">
     <div id="main-header" class="main-header">
