env gain change poc

--- a/resources/app/static/css/base.css
+++ b/resources/app/static/css/base.css
@@ -99,6 +99,18 @@ table {
 
 }
 
+.gain input {
+    height: 25px;
+    width: 25px;
+    font-size: larger;
+    color: #fff;
+    background-color: #222;
+    border: 1px solid #aaa;
+    border-style: solid;
+    border-radius: 5px;
+
+}
+
 .dir {
     cursor: pointer;
     padding: 3px;
